--- a/.github/workflows/godot.yml
+++ b/.github/workflows/godot.yml
@@ -42,9 +42,8 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          which cl || true
-          which cl.exe || true
-          ls -R /opt
+          ls -R /opt || true
+          ls -R /c || true
           cd $GAMEDIR
           dotnet build
 
