--- a/.github/workflows/gdext.yml
+++ b/.github/workflows/gdext.yml
@@ -35,13 +35,17 @@ jobs:
         with:
           vcpkgGitCommitId: ${{ env.vcpkg_tag }}
 
+      - shell: bash
+        run: |
+          echo "cache_key=godot-cpp-${{ runner.os }}-$ImageVersion-${{ hashFiles('gdext/godot-cpp/gdextension/extension_api.json') }}" >> $GITHUB_ENV
+
       - uses: actions/cache@v4
         id: cache-godot-cpp
         if: github.ref_type != 'tag'
         with:
           path: |
             gdext/scons_cache
-          key: godot-cpp-${{ runner.os }}-${{ env.ImageVersion }}-${{ hashFiles('gdext/godot-cpp/gdextension/extension_api.json') }}
+          key: ${{ env.cache_key }}
 
       - name: Build
         if: github.ref_type != 'tag'
